--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="button" data-val="100" data-cost="100000">END OF THE WORLD - <span>100000</span>
   </div>
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="./js/script.js"></script>
 
 </body>
